tests/baselines/reference/untypedModuleImport(strict=true).errors.txt
/a.ts(1,22): error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
/b.ts(1,22): error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
/c.ts(1,26): error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.


==== /c.ts (1 errors) ====
    import foo, { bar } from "foo";
                             ~~~~~
!!! error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
    import "./a";
    import "./b";
    foo(bar());
    
==== /node_modules/foo/index.js (0 errors) ====
    This file is not processed.
    
==== /a.ts (1 errors) ====
    import * as foo from "foo";
                         ~~~~~
!!! error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
    foo.bar();
    
==== /b.ts (1 errors) ====
    import foo = require("foo");
                         ~~~~~
!!! error TS7016: Could not find a declaration file for module 'foo'. '/node_modules/foo/index.js' implicitly has an 'any' type.
    foo();
    